# LasertagWarszaw

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging_config.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  supervisor.conf  telegram_bot.py
.github/workflows/: ci.yml
bot/: Dockerfile  main.py  telegram_bot.py
bot/admin/: admin_handlers.py
bot/core/: database_manager.py  database_utils.py  localization.py  menu_utils.py
bot/handlers/: common_handlers.py
bot/keyboards/: common_keyboards.py
bot/tests/test_utils/: test_factories.py
bot/tests/tests_handler/: test_basic.py  test_start.py
bot/user/: user_handlers.py
bot/utils/: localization.py
laser_tag_admin/: Dockerfile  admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
laser_tag_admin/games/: admin.py  apps.py  models.py  urls.py  views.py
laser_tag_admin/games/migrations/: 0001_initial.py  0002_alter_game_players_count_player.py  0003_remove_game_status_delete_player.py  0004_gameregistration.py  0005_remove_game_players_count.py
laser_tag_admin/templates/: base.html  footer.html  form.html  index.html  login.html  navbar.html
laser_tag_admin/templates/games/: game_confirm_delete.html  game_detail.html  game_edit.html  game_form.html  game_list.html
laser_tag_admin/templates/users/: user_confirm_delete.html  user_edit.html  users_list.html
laser_tag_admin/tests/tests_games/: test_models.py  test_views.py
laser_tag_admin/tests/tests_users/: test_views.py
laser_tag_admin/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
laser_tag_admin/users/migrations/: 0001_initial.py  0002_user_delete_telegramuser.py  0003_user_is_admin.py  (+2 more)
(+10 files in other folders)
