[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot for laser tag game"
authors = ["Maksim Rubanets"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "bot" }
]

[tool.poetry.scripts]
start-bot = "bot.main:main"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.7"
django = "^5.1.3"
dj-database-url = "^2.3.0"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.3"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
